Fix issue that overlapping .filters element makes links unclickable.

--- a/source/stylesheets/_layout.scss
+++ b/source/stylesheets/_layout.scss
@@ -23,6 +23,10 @@
       top: 0;
       max-width: inherit;
       width: 100%;
+      pointer-events: none;
+      // Seems to be necessary for IE to replicate pointer-events.
+      // TODO: Check during browser testing
+      background: none !important;
 
       > .input-filters {
         margin-top: -$gutter;
